@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Bug Fixes::
 
 * interpret `start-at` theme keys with value `1` correctly (as `1` instead of `2`) (#2255)
+* restore column layout after importing page(s) from PDF (#2253)
 * fix crash when border color is transparent (thematic_break_border_color, admonition_column_rule, quote_border_color, verse_border_color)
 * verify page margin is restored after imported page
 
